--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,10 @@
     -->
     <title>React App</title>
     <script src="https://kit.fontawesome.com/d1d5785625.js" crossorigin="anonymous"></script>
+    <link
+      href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
