--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>John's Portfolio</title>
+    <title>Andrew's Portfolio</title>
     <script src="https://kit.fontawesome.com/d1d5785625.js" crossorigin="anonymous"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@700&display=swap"
